[gd_scene load_steps=2 format=3 uid="uid://c71r3yctnr0pa"]

[ext_resource type="Script" path="res://Main/gallery.gd" id="1_2ywvl"]

[node name="Gallery" type="Node"]
script = ExtResource("1_2ywvl")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 331.0
offset_bottom = 720.0

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
dragger_visibility = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Easy" type="Button" parent="VBoxContainer/HSplitContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Easy"

[node name="Medium" type="Button" parent="VBoxContainer/HSplitContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Medium"

[node name="Hard" type="Button" parent="VBoxContainer/HSplitContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hard"

[node name="Sort" type="Button" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
text = "              "

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="VBoxContainer/HSplitContainer/HBoxContainer/Easy" to="." method="easy_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/HBoxContainer/Medium" to="." method="medium_pressed"]
[connection signal="pressed" from="VBoxContainer/HSplitContainer/HBoxContainer/Hard" to="." method="hard_pressed"]
